--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4.1.17",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
-    "framer-motion": "^7.5.3",
     "immer": "^9.0.15",
     "next": "12.1.0",
+    "nookies": "^2.5.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-query": "^3.34.16",
     "yup": "^0.32.11",
     "zustand": "^4.1.2"
